Added Banner in homepage

--- a/streaming-platform/src/style/header.scss
+++ b/streaming-platform/src/style/header.scss
@@ -4,7 +4,9 @@ button {
     all: unset;
 }
 
-.header {
+.Header {
+    position: absolute;
+    width: 100%;
     background-color: $RubyPlex-DarkBlue;
     height: 4em;
 
@@ -14,15 +16,17 @@ button {
         align-items: center;
         gap: 1em;
         height: 100%;
-        &__logo{
+
+        &__logo {
             height: 2.5em;
         }
+
         &__btn {
             font-size: 17px;
             padding: 0.5em 1em;
-            color: $RubyPlex-White;
             position: relative;
             transition: .5s ease;
+            color: $RubyPlex-White;
 
             &::before {
                 content: '';
@@ -42,8 +46,9 @@ button {
                     width: 100%;
                 }
             }
-            &:active{
-                &::before{
+
+            &:active {
+                &::before {
                     content: '';
                     position: absolute;
                     width: 100%;
@@ -52,8 +57,9 @@ button {
                     transition: .5s ease;
                 }
             }
+
             &-active {
-                &::before{
+                &::before {
                     content: '';
                     position: absolute;
                     left: 0;
@@ -63,6 +69,7 @@ button {
                     background-color: $RubyPlex-MediumRed;
                     transition: .5s ease;
                 }
+
                 color: $RubyPlex-LightRed;
             }
         }
