--- a/streaming-platform/src/style/themes.scss
+++ b/streaming-platform/src/style/themes.scss
@@ -7,3 +7,4 @@ $RubyPlex-DarkGrey: #0f0f0f;
 $RubyPlex-MediumGrey: #171717;
 $RubyPlex-DarkBlue: #1e1e2b;
 $RubyPlex-White: #ffffff;
+$RubyPlex-MediumRed-Transparent: #8b00006e;
