Added TMDB configuration and Flipcard in homepage

--- a/streaming-platform/src/style/header.scss
+++ b/streaming-platform/src/style/header.scss
@@ -37,6 +37,7 @@ button {
                 width: 0;
                 background-color: $RubyPlex-Red;
                 transition: .5s ease;
+                box-shadow: 0 0 30px 5px $RubyPlex-MediumRed;
             }
 
             &:hover {
