--- a/streaming-platform/src/style/themes.scss
+++ b/streaming-platform/src/style/themes.scss
@@ -1,10 +1,13 @@
 $RubyPlex-DarkRed: #650000;
+$RubyPlex-DarkRed-Transparent: #650000cf;
 $RubyPlex-MediumRed: #8b0000;
+$RubyPlex-MediumRed-Transparent: #8b00006e;
 $RubyPlex-LightRed: #a40000;
 $RubyPlex-Red: #ff1a1a;
 $RubyPlex-Black: #000000;
 $RubyPlex-DarkGrey: #0f0f0f;
 $RubyPlex-MediumGrey: #171717;
+$RubyPlex-LightGrey: #afafaf;
 $RubyPlex-DarkBlue: #1e1e2b;
 $RubyPlex-White: #ffffff;
-$RubyPlex-MediumRed-Transparent: #8b00006e;
+$RubyPlex-Footer: #121218;
