Added Show page to display info of the serie

--- a/streaming-platform/src/style/themes.scss
+++ b/streaming-platform/src/style/themes.scss
@@ -8,6 +8,8 @@ $RubyPlex-Black: #000000;
 $RubyPlex-DarkGrey: #0f0f0f;
 $RubyPlex-MediumGrey: #171717;
 $RubyPlex-LightGrey: #afafaf;
+$RubyPlex-LightBlue: #39394e;
 $RubyPlex-DarkBlue: #1e1e2b;
+$RubyPlex-VeryDarkBlue: #111114;
 $RubyPlex-White: #ffffff;
 $RubyPlex-Footer: #121218;
