--- a/streaming-platform/src/style/style.scss
+++ b/streaming-platform/src/style/style.scss
@@ -1,6 +1,7 @@
 @import './header.scss';
 @import './home.scss';
 @import './show.scss';
+@import './serieVideo.scss';
 @import './footer.scss';
 
 .App {
