--- a/streaming-platform/src/style/themes.scss
+++ b/streaming-platform/src/style/themes.scss
@@ -2,7 +2,7 @@ $RubyPlex-DarkRed: #650000;
 $RubyPlex-DarkRed-Transparent: #650000cf;
 $RubyPlex-MediumRed: #8b0000;
 $RubyPlex-MediumRed-Transparent: #8b00006e;
-$RubyPlex-LightRed: #a40000;
+$RubyPlex-LightRed: #ffabab;
 $RubyPlex-Red: #ff1a1a;
 $RubyPlex-Black: #000000;
 $RubyPlex-DarkGrey: #0f0f0f;
