--- a/streaming-platform/src/style/footer.scss
+++ b/streaming-platform/src/style/footer.scss
@@ -10,6 +10,7 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
+    flex-wrap: wrap;
     max-width: 1200px;
     margin: 0 auto;
 
