--- a/streaming-platform/src/style/show.scss
+++ b/streaming-platform/src/style/show.scss
@@ -5,6 +5,17 @@
     gap: 3em;
     padding: 3em;
     background-color: $RubyPlex-VeryDarkBlue;
+    position: relative;
+    &-Banner{
+        position: absolute;
+        background-color: white;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 450px;
+        opacity: 0.5;
+        filter: brightness(0.5);
+    }
 
     &-ImageContainer {
         display: flex;
@@ -13,6 +24,7 @@
         padding: 0.75em;
         border-radius: 0.25rem;
         height:100%;
+        z-index: 1000;
 
         &__Img {
             width: 240px;
@@ -23,21 +35,31 @@
         display: flex;
         flex-direction: column;
         gap: 1em;
+        z-index: 1000;
 
         &-Section {
-            background: $RubyPlex-DarkBlue;
+            display: flex;
+            flex-direction: column;
+            gap: 0.5em;
             color: $RubyPlex-White;
             padding: 0.75em;
             border-radius: 0.25rem;
-
             &__Title {
+                font-size: 1.75rem;
+                margin: 0 !important;
                 margin-bottom: 1em;
+                font-weight: 700;
             }
-
-            &--BtnContainer {
+            &__Genres{
                 display: flex;
-                flex-wrap: wrap;
-                gap: 1em;
+                gap: 0.5em;
+                > div{
+                    background-color: #ffffff14;
+                    color: $RubyPlex-White;
+                }
+            }
+            &__WatchNow {
+                margin-top: 2em;
             }
 
             &__Btn {
