--- a/streaming-platform/src/style/show.scss
+++ b/streaming-platform/src/style/show.scss
@@ -2,11 +2,13 @@
 
 .Show {
     display: flex;
+    flex-direction: column;
     gap: 3em;
     padding: 3em;
     background-color: $RubyPlex-VeryDarkBlue;
     position: relative;
-    &-Banner{
+
+    &-Banner {
         position: absolute;
         background-color: white;
         top: 0;
@@ -23,7 +25,7 @@
         background: $RubyPlex-DarkBlue;
         padding: 0.75em;
         border-radius: 0.25rem;
-        height:100%;
+        height: 100%;
         z-index: 1000;
 
         &__Img {
@@ -33,55 +35,95 @@
 
     &-Description {
         display: flex;
-        flex-direction: column;
         gap: 1em;
-        z-index: 1000;
+
+        &-Sections {
+            z-index: 1000;
+        }
 
         &-Section {
             display: flex;
             flex-direction: column;
             gap: 0.5em;
             color: $RubyPlex-White;
-            padding: 0.75em;
             border-radius: 0.25rem;
+
             &__Title {
                 font-size: 1.75rem;
                 margin: 0 !important;
                 margin-bottom: 1em;
                 font-weight: 700;
             }
-            &__Genres{
+
+            &__Genres {
                 display: flex;
                 gap: 0.5em;
-                > div{
+
+                >div {
                     background-color: #ffffff14;
                     color: $RubyPlex-White;
                 }
             }
+
             &__WatchNow {
                 margin-top: 2em;
             }
 
+            &-Buttons {
+                display: flex;
+                gap: 1em;
+            }
+
             &__Btn {
+                position: relative;
+                cursor: pointer;
                 background: $RubyPlex-VeryDarkBlue;
-                color: white;
+                color: $RubyPlex-White;
                 padding: 8px 16px;
                 border-radius: 4px;
-                cursor: pointer;
                 transition: background-color 0.3s ease;
-
+                transition-delay: 0.15s;
+                transition-duration: 400ms;
+                
                 &-Active {
+                    position: relative;
                     background-color: #39394e;
                     padding: 8px 16px;
                     border-radius: 4px;
+                    color: $RubyPlex-White;
+                    &:after {
+                        content: "";
+                        pointer-events: none;
+                        bottom: -2px;
+                        width: 100% !important;
+                        left: 0 !important;
+                        position: absolute;
+                        height: 2px;
+                        background-color: #fff;
+                        transition-duration: 400ms;
+                        transition-property: width, left;
+                    }
                 }
-
                 &:hover {
                     background-color: $RubyPlex-LightBlue;
+                    color: #fff;
+                    &:after {
+                        width: 100%;
+                        left: 0%;
+                    }
                 }
-
-                &:active {
-                    background-color: #39394e;
+                &:after {
+                    content: "";
+                    pointer-events: none;
+                    bottom: -2px;
+                    left: 50%;
+                    position: absolute;
+                    width: 0%;
+                    height: 2px;
+                    background-color: #fff;
+                    transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
+                    transition-duration: 400ms;
+                    transition-property: width, left;
                 }
             }
         }
