--- a/streaming-platform/src/style/show.scss
+++ b/streaming-platform/src/style/show.scss
@@ -14,7 +14,7 @@
         top: 0;
         left: 0;
         width: 100%;
-        height: 450px;
+        height: auto;
         opacity: 0.5;
         filter: brightness(0.5);
     }
@@ -72,8 +72,17 @@
             &-Buttons {
                 display: flex;
                 gap: 1em;
+                padding: 1em;
+                background: #1e1e2b;
+                border-radius: 5px;
+                margin-bottom: 1em;
             }
-
+            &-Episodes{
+                display: flex;
+                justify-content: center;
+                gap: 1em;
+                flex-wrap: wrap;
+            }
             &__Btn {
                 position: relative;
                 cursor: pointer;
