--- a/streaming-platform/src/style/themes.scss
+++ b/streaming-platform/src/style/themes.scss
@@ -2,7 +2,7 @@ $RubyPlex-DarkRed: #650000;
 $RubyPlex-DarkRed-Transparent: #650000cf;
 $RubyPlex-MediumRed: #8b0000;
 $RubyPlex-MediumRed-Transparent: #8b00006e;
-$RubyPlex-LightRed: #ffabab;
+$RubyPlex-LightRed: #ffdada;
 $RubyPlex-Red: #ff1a1a;
 $RubyPlex-Black: #1d1d1f;
 $RubyPlex-DarkGrey: #0f0f0f;
@@ -10,6 +10,7 @@ $RubyPlex-MediumGrey: #171717;
 $RubyPlex-LightGrey: #afafaf;
 $RubyPlex-LightBlue: #39394e;
 $RubyPlex-DarkBlue: #1e1e2b;
+$RubyPlex-DarkBlue-Transparent: #1e1e2b50;
 $RubyPlex-VeryDarkBlue: #111114;
 $RubyPlex-White: #f5f5f7;
 $RubyPlex-Footer: #121218;
