--- a/streaming-platform/src/style/style.scss
+++ b/streaming-platform/src/style/style.scss
@@ -8,11 +8,90 @@
 .App {
   position: relative;
 }
-html{
+
+html {
   scroll-behavior: smooth;
+  background-color: $RubyPlex-VeryDarkBlue;
 }
-a{
+
+a {
   text-decoration: none;
   color: white;
 }
 
+
+.Shows{
+  margin: 2em 3em;
+  background-color: $RubyPlex-DarkBlue-Transparent;
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+  &-Header{
+    background-color: $RubyPlex-LightBlue;
+    padding: 1em;
+    font-weight: 600;
+    font-size: 15pt;
+    color: $RubyPlex-White;
+  }
+  &-Pagination{
+    display: flex;
+    justify-content: end;
+    padding: 1em;
+    background-color: $RubyPlex-LightBlue;
+    color: $RubyPlex-White;
+    & .MuiPaginationItem-root {
+      color: $RubyPlex-White;
+    }
+  }
+}
+
+.ShowCard {
+  position: relative;
+  cursor: pointer;
+  overflow: hidden;
+  width: 190px;
+  height: 250px;
+  border-radius: 20px;
+  background: #f5f5f5;
+  border: 2px solid $RubyPlex-LightBlue;
+  transition: 0.5s ease-out;
+
+  &-Container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 2rem;    
+  }
+
+  &-Image {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+  }
+
+  &-Title {
+    transform: translate(-50%, 125%);
+    width: calc(100% - 2rem);
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    background-color: #00000080;
+    color: $RubyPlex-White;
+    font-size: 1rem;
+    padding: 0.5rem 1rem;
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    opacity: 0;
+    transition: 0.3s ease-out;
+  }
+
+  &:hover {
+    border-color: $RubyPlex-LightGrey;
+    box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.25);
+  }
+
+  &:hover &-Title {
+    transform: translate(-50%, 0);
+    opacity: 1;
+  }
+}
