--- a/streaming-platform/src/style/home.scss
+++ b/streaming-platform/src/style/home.scss
@@ -97,7 +97,8 @@
     }
 
     & .SeriesCardCarousel {
-        height: 300px;
+        height: 400px;
+        align-items: center;
     }
 
     &-LatestMovie {
@@ -108,18 +109,22 @@
         gap: 2em;
         height: 500px;
         background: $RubyPlex-DarkBlue;
-
-        &__Title {
-            margin: 0;
-            font-size: 20pt;
-            font-weight: bold;
-            letter-spacing: 2px;
-            color: $RubyPlex-White;
-            padding: 1em;
+        &-Title{
+            background-color: $RubyPlex-LightBlue;
+            width: 100%;
+            & > p{
+                    margin: 0;
+                    font-size: 20pt;
+                    font-weight: bold;
+                    letter-spacing: 2px;
+                    color: $RubyPlex-White;
+                    padding: 1em;
+            }
         }
 
         &__Carousel {
             width: 100%;
+            height: 100%;
             justify-content: center;
             align-items: center;
             user-select: none;
