--- a/streaming-platform/src/style/show.scss
+++ b/streaming-platform/src/style/show.scss
@@ -197,6 +197,7 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
+      min-height: 600px;
       gap: 2rem;    
     }
   
