--- a/streaming-platform/src/style/style.scss
+++ b/streaming-platform/src/style/style.scss
@@ -4,6 +4,7 @@
 @import './show.scss';
 @import './serieVideo.scss';
 @import './footer.scss';
+@import './search.scss';
 
 @font-face {
   font-family: 'Signika';
