--- a/streaming-platform/src/style/header.scss
+++ b/streaming-platform/src/style/header.scss
@@ -34,7 +34,7 @@ button {
                 margin: 0;
                 position: relative;
                 font-size: 20px;
-                color:  $RubyPlex-White;
+                color:  $RubyPlex-LightGrey;
                 letter-spacing: 1px;
             }
 
@@ -44,7 +44,7 @@ button {
                 width: 0;
                 left: 0;
                 bottom: -7px;
-                background: $RubyPlex-LightRed;
+                background: $RubyPlex-White;
                 height: 2px;
                 transition: 0.3s ease-out;
             }
@@ -55,7 +55,7 @@ button {
                 position: absolute;
                 content: attr(name);
                 width: 0%;
-                color: $RubyPlex-LightRed;
+                color: $RubyPlex-White;
                 letter-spacing: 1px;
                 // -webkit-text-stroke: 1px;
                 overflow: hidden;
@@ -77,7 +77,7 @@ button {
                     position: absolute;
                     content: attr(name);
                     width: 100%;
-                    color: $RubyPlex-LightRed;
+                    color: $RubyPlex-White;
                     letter-spacing: 1px;
                     // -webkit-text-stroke: 1px;
                     overflow: hidden;
@@ -89,9 +89,9 @@ button {
                     bottom: -7px;
                     height: 2px;
                     width: 100%;
-                    background-color: $RubyPlex-LightRed;
+                    background-color: $RubyPlex-White;
                 }
-                color: $RubyPlex-LightRed;
+                color: $RubyPlex-White;
             }
         }
     }
@@ -99,4 +99,8 @@ button {
         margin-left: auto;
         margin-right: 1em;
     }
+}
+
+.MobileHeader{
+    background-color: $RubyPlex-DarkBlue;
 }
