Introduced prisma and graphql

--- a/streaming-platform/src/style/search.scss
+++ b/streaming-platform/src/style/search.scss
@@ -21,6 +21,7 @@
       z-index: 2;
       > #SearchIcon{
         color: $RubyPlex-White;
+        padding-right: 3px;
       }
     }
     &-Cover{
