Added Create Show and fetch seasons

--- a/streaming-platform/src/style/home.scss
+++ b/streaming-platform/src/style/home.scss
@@ -112,6 +112,11 @@
         &-Title{
             background-color: $RubyPlex-LightBlue;
             width: 100%;
+            display: flex;
+            align-items: center;
+            & .IconButton{
+                margin-left: auto;
+            }
             & > p{
                     margin: 0;
                     font-size: 20pt;
