Added functionality to create season

--- a/streaming-platform/src/style/show.scss
+++ b/streaming-platform/src/style/show.scss
@@ -97,6 +97,9 @@
             border-radius: 5px;
             margin-bottom: 1em;
         }
+        & .AddBtn{
+            margin-left: auto;
+        }
 
         &__Btn {
             position: relative;
