--- a/streaming-platform/src/style/header.scss
+++ b/streaming-platform/src/style/header.scss
@@ -12,7 +12,8 @@ button {
     gap: 2em;
 
     &-list {
-        margin-left: 1em;
+        background: linear-gradient(315deg, rgba(30, 30, 43, 0.4392156863), rgba(17, 17, 40, 0.8), rgba(30, 30, 43, 0.4392156863));
+        padding-left: 1em;
         display: flex;
         align-items: center;
         gap: 1em;
@@ -35,7 +36,7 @@ button {
                 margin: 0;
                 position: relative;
                 font-size: 20px;
-                color:  $RubyPlex-LightGrey;
+                color:  $RubyPlex-White;
                 letter-spacing: 1px;
             }
 
