--- a/streaming-platform/src/style/serieVideo.scss
+++ b/streaming-platform/src/style/serieVideo.scss
@@ -5,6 +5,7 @@
     justify-content: center;
     padding: 4em 0;
     background-color: $RubyPlex-VeryDarkBlue;
+    gap: 0.5em;
 
     &-Episodes {
         display: flex;
@@ -13,12 +14,13 @@
         background-color: $RubyPlex-DarkBlue;
         color: $RubyPlex-White;
         overflow: auto;
-        max-height: 600px;
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 
         &__Title {
             padding: 1em;
             font-size: 14pt;
-            background-color: $RubyPlex-DarkRed;
+            background: linear-gradient(135deg, #650000ba, #8b0000a1, #1e1e2b91, #11111491);
             font-weight: bold;
             margin: 0;
         }
@@ -51,6 +53,9 @@
     }
 
     &-Video {
+        display: flex;
+        flex-direction: column;
+        gap: 0.5em;
         width: 70%;
 
         &>div:nth-child(1) {
@@ -61,6 +66,8 @@
         & video {
             width: 100%;
             height: 500px;
+            background-color: $RubyPlex-Black;
+            border-radius: 10px;
         }
 
         &__Description {
@@ -69,6 +76,38 @@
             color: $RubyPlex-White;
             padding: 0.75em;
             border-radius: 0.25rem;
+            border-radius: 10px;
+            font-family: 'Arial', sans-serif;
+            color: #f1f1f1;
+            line-height: 1.6;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+
+            & div {
+                margin-bottom: 10px;
+            }
+
+            & .info {
+                font-size: 1.2rem;
+                font-weight: bold;
+                color: #cccccc;
+
+                &-name {
+                    font-size: 1.5rem;
+                    font-weight: bold;
+                    color: #ffffff;
+                }
+            }
+
+            & .season {
+                font-size: 1.2rem;
+                color: #aaaaaa;
+            }
+
+            & .description {
+                font-size: 1rem;
+                color: #888888;
+                font-style: italic;
+            }
         }
 
         &_WatchMore {
