--- a/streaming-platform/src/style/show.scss
+++ b/streaming-platform/src/style/show.scss
@@ -97,9 +97,6 @@
             border-radius: 5px;
             margin-bottom: 1em;
         }
-        & .AddBtn{
-            margin-left: auto;
-        }
 
         &__Btn {
             position: relative;
@@ -176,7 +173,7 @@
     gap: 1em;
 
     &-Header {
-        background-color: $RubyPlex-LightBlue;
+        background: linear-gradient(315deg, #39394e, #15152f);
         padding: 1em;
         font-weight: 600;
         font-size: 15pt;
@@ -187,7 +184,7 @@
         display: flex;
         justify-content: flex-end;
         padding: 1em;
-        background-color: $RubyPlex-LightBlue;
+        background: linear-gradient(315deg, #39394e, #15152f);
         color: $RubyPlex-White;
 
         & .MuiPaginationItem-root {
@@ -245,5 +242,18 @@
     &:hover &-Title {
         transform: translate(-50%, 0);
         opacity: 1;
+    }
+}
+
+.CreateSeason-Modal{
+    &-UploadButtons{
+        width: 100%;
+        display: flex;
+        justify-content: space-evenly;
+        margin: 1.5em 0;
+        > div{
+            width: 100%;
+            text-align: center;
+        }
     }
 }
