--- a/streaming-platform/src/style/style.scss
+++ b/streaming-platform/src/style/style.scss
@@ -6,6 +6,14 @@
 @import './footer.scss';
 @import './search.scss';
 
+:root {
+  --typography-white: #f5f5f5;
+  --typography-primary: #1e1e2b;
+  --typography-secondary: #edf2ff;
+  --icon-default: #f5f5f5;
+  --ruby-default: #f5f5f5;
+}
+
 @font-face {
   font-family: 'Signika';
   src: url('../fonts/Signika_Negative/SignikaNegative-VariableFont_wght.ttf') format('truetype');
