--- a/streaming-platform/src/style/themes.scss
+++ b/streaming-platform/src/style/themes.scss
@@ -14,6 +14,7 @@ $RubyPlex-DarkBlue-Transparent: #1e1e2b50;
 $RubyPlex-VeryDarkBlue: #111114;
 $RubyPlex-White: #f5f5f7;
 $RubyPlex-Footer: #121218;
+$RubyPlex-Black: #000000;
 
 
 .RubyButton {
